--- a/All.tex
+++ b/All.tex
@@ -79,15 +79,13 @@ The naming convention consists of three cases:
       einstein.grothendieck.ea:25:private
     \end{center}
 \end{enumerate}
+\bigskip
 
 Here is a demonstration how to use it in neovim:
 \begin{center}
-  \url{https://asciinema.org/a/596819}
+  \url{https://asciinema.org/a/596819}.
 \end{center}
 
-\begin{center}
-  \url{https://mathscinet.ams.org/mathscinet}.
-\end{center}
 
 % \cite{MR428626}
 
@@ -98,6 +96,8 @@ Here is a demonstration how to use it in neovim:
 % \printbibheading
 % \printbibliography[keyword=major,heading=subbibliography,title={Major Sources}]
 % \printbibliography[keyword=minor,heading=subbibliography,title={Minor Sources}]
+
+\section{All references listed by the citation keys}
 
 \citeall
 
