Add a preprint by Janjigian, Firas and Timo

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 692b2feba06a73029412f5fd03bd1b10b52ef503
+% Commit: 39b5fc5591dc5d591321bb03b853dff170be0718
 % Date: 2023-08-03
 % ---------------------------
 
@@ -7556,6 +7556,23 @@
 @Article{	  borodin.corwin.ea:15:spectral,
   author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
 		  Sasamoto, Tomohiro},
+  title		= {Spectral theory for the {$q$}-{B}oson particle system},
+  journal	= {Compos. Math.},
+  fjournal	= {Compositio Mathematica},
+  volume	= {151},
+  year		= {2015},
+  number	= {1},
+  pages		= {1--67},
+  issn		= {0010-437X},
+  mrclass	= {82B23 (05E05)},
+  mrnumber	= {3305308},
+  doi		= {10.1112/S0010437X14007532},
+  url		= {https://doi.org/10.1112/S0010437X14007532}
+}
+
+@Article{	  borodin.corwin.ea:15:spectral*1,
+  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
+		  Sasamoto, Tomohiro},
   title		= {Spectral theory for interacting particle systems solvable
 		  by coordinate {B}ethe ansatz},
   journal	= {Comm. Math. Phys.},
@@ -7569,23 +7586,6 @@
   mrnumber	= {3385995},
   doi		= {10.1007/s00220-015-2424-7},
   url		= {https://doi.org/10.1007/s00220-015-2424-7}
-}
-
-@Article{	  borodin.corwin.ea:15:spectral*1,
-  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
-		  Sasamoto, Tomohiro},
-  title		= {Spectral theory for the {$q$}-{B}oson particle system},
-  journal	= {Compos. Math.},
-  fjournal	= {Compositio Mathematica},
-  volume	= {151},
-  year		= {2015},
-  number	= {1},
-  pages		= {1--67},
-  issn		= {0010-437X},
-  mrclass	= {82B23 (05E05)},
-  mrnumber	= {3305308},
-  doi		= {10.1112/S0010437X14007532},
-  url		= {https://doi.org/10.1112/S0010437X14007532}
 }
 
 @Article{	  borodin.corwin.ea:16:observables,
@@ -15103,24 +15103,6 @@
 }
 
 @Article{	  conus.joseph.ea:13:on,
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar},
-  title		= {On the chaotic character of the stochastic heat equation,
-		  before the onset of intermitttency},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {41},
-  year		= {2013},
-  number	= {3B},
-  pages		= {2225--2260},
-  issn		= {0091-1798},
-  mrclass	= {60H15 (35R60)},
-  mrnumber	= {3098071},
-  mrreviewer	= {Sergey V. Lototsky},
-  doi		= {10.1214/11-AOP717},
-  url		= {https://doi.org/10.1214/11-AOP717}
-}
-
-@Article{	  conus.joseph.ea:13:on*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {On the chaotic character of the stochastic heat equation,
@@ -15137,6 +15119,24 @@
   mrreviewer	= {Sergey V. Lototsky},
   doi		= {10.1007/s00440-012-0434-3},
   url		= {https://doi.org/10.1007/s00440-012-0434-3}
+}
+
+@Article{	  conus.joseph.ea:13:on*1,
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar},
+  title		= {On the chaotic character of the stochastic heat equation,
+		  before the onset of intermitttency},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {41},
+  year		= {2013},
+  number	= {3B},
+  pages		= {2225--2260},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35R60)},
+  mrnumber	= {3098071},
+  mrreviewer	= {Sergey V. Lototsky},
+  doi		= {10.1214/11-AOP717},
+  url		= {https://doi.org/10.1214/11-AOP717}
 }
 
 @Article{	  conus.joseph.ea:14:initial,
@@ -18364,23 +18364,6 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -18396,6 +18379,23 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -18584,6 +18584,25 @@
   author	= {Dawson, Donald A. and Etheridge, Alison M. and
 		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
 		  and Xiong, Jie},
+  title		= {Mutually catalytic branching in the plane: infinite
+		  measure states},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {7},
+  year		= {2002},
+  pages		= {No. 15, 61},
+  issn		= {1083-6489},
+  mrclass	= {60K35 (60G57 60J80)},
+  mrnumber	= {1921744},
+  mrreviewer	= {Achim Klenke},
+  doi		= {10.1214/EJP.v7-114},
+  url		= {https://doi.org/10.1214/EJP.v7-114}
+}
+
+@Article{	  dawson.etheridge.ea:02:mutually*1,
+  author	= {Dawson, Donald A. and Etheridge, Alison M. and
+		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
+		  and Xiong, Jie},
   title		= {Mutually catalytic branching in the plane: finite measure
 		  states},
   journal	= {Ann. Probab.},
@@ -18598,25 +18617,6 @@
   mrreviewer	= {Roger Tribe},
   doi		= {10.1214/aop/1039548370},
   url		= {https://doi.org/10.1214/aop/1039548370}
-}
-
-@Article{	  dawson.etheridge.ea:02:mutually*1,
-  author	= {Dawson, Donald A. and Etheridge, Alison M. and
-		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
-		  and Xiong, Jie},
-  title		= {Mutually catalytic branching in the plane: infinite
-		  measure states},
-  journal	= {Electron. J. Probab.},
-  fjournal	= {Electronic Journal of Probability},
-  volume	= {7},
-  year		= {2002},
-  pages		= {No. 15, 61},
-  issn		= {1083-6489},
-  mrclass	= {60K35 (60G57 60J80)},
-  mrnumber	= {1921744},
-  mrreviewer	= {Achim Klenke},
-  doi		= {10.1214/EJP.v7-114},
-  url		= {https://doi.org/10.1214/EJP.v7-114}
 }
 
 @Article{	  dawson.feng:01:large,
@@ -33376,25 +33376,6 @@
 @Article{	  huang.le.ea:17:large,
   author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
   title		= {Large time asymptotics for the parabolic {A}nderson model
-		  driven by space and time correlated noise},
-  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
-  fjournal	= {Stochastic Partial Differential Equations. Analysis and
-		  Computations},
-  volume	= {5},
-  year		= {2017},
-  number	= {4},
-  pages		= {614--651},
-  issn		= {2194-0401},
-  mrclass	= {60G15 (35B40 35K15 35R60 60F10 60H07 60H15 65M75)},
-  mrnumber	= {3736656},
-  mrreviewer	= {Xia Chen},
-  doi		= {10.1007/s40072-017-0099-0},
-  url		= {https://doi.org/10.1007/s40072-017-0099-0}
-}
-
-@Article{	  huang.le.ea:17:large*1,
-  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
-  title		= {Large time asymptotics for the parabolic {A}nderson model
 		  driven by spatially correlated noise},
   journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
   fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
@@ -33409,6 +33390,25 @@
   mrreviewer	= {Xia Chen},
   doi		= {10.1214/16-AIHP756},
   url		= {https://doi.org/10.1214/16-AIHP756}
+}
+
+@Article{	  huang.le.ea:17:large*1,
+  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
+  title		= {Large time asymptotics for the parabolic {A}nderson model
+		  driven by space and time correlated noise},
+  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
+  fjournal	= {Stochastic Partial Differential Equations. Analysis and
+		  Computations},
+  volume	= {5},
+  year		= {2017},
+  number	= {4},
+  pages		= {614--651},
+  issn		= {2194-0401},
+  mrclass	= {60G15 (35B40 35K15 35R60 60F10 60H07 60H15 65M75)},
+  mrnumber	= {3736656},
+  mrreviewer	= {Xia Chen},
+  doi		= {10.1007/s40072-017-0099-0},
+  url		= {https://doi.org/10.1007/s40072-017-0099-0}
 }
 
 @Article{	  huang.le:19:spatial,
@@ -33997,6 +33997,17 @@
   mrreviewer	= {Steven Joel Miller},
   doi		= {10.1017/mag.2014.9},
   url		= {https://doi.org/10.1017/mag.2014.9}
+}
+
+@Article{	  janjigian.rassoul-agha.ea:22:ergodicity,
+  title		= {Ergodicity and synchronization of the Kardar-Parisi-Zhang
+		  equation},
+  author	= {Christopher Janjigian and Firas Rassoul-Agha and Timo
+		  Sepp\"al\"ainen},
+  year		= {2022},
+  month		= {November},
+  journal	= {preprint arXiv:2211.06779},
+  url		= {http://arXiv.org/abs/2211.06779}
 }
 
 @Article{	  janjigian:15:large,
@@ -46564,24 +46575,6 @@
 
 @Article{	  nourdin.simon:06:on,
   author	= {Nourdin, Ivan and Simon, Thomas},
-  title		= {On the absolute continuity of {L}\'{e}vy processes with
-		  drift},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {34},
-  year		= {2006},
-  number	= {3},
-  pages		= {1035--1051},
-  issn		= {0091-1798},
-  mrclass	= {60G51 (60H10)},
-  mrnumber	= {2243878},
-  mrreviewer	= {Tina M. Marquardt},
-  doi		= {10.1214/009117905000000620},
-  url		= {https://doi.org/10.1214/009117905000000620}
-}
-
-@Article{	  nourdin.simon:06:on*1,
-  author	= {Nourdin, Ivan and Simon, Thomas},
   title		= {On the absolute continuity of one-dimensional {SDE}s
 		  driven by a fractional {B}rownian motion},
   journal	= {Statist. Probab. Lett.},
@@ -46596,6 +46589,24 @@
   mrreviewer	= {Andreas Neuenkirch},
   doi		= {10.1016/j.spl.2005.10.021},
   url		= {https://doi.org/10.1016/j.spl.2005.10.021}
+}
+
+@Article{	  nourdin.simon:06:on*1,
+  author	= {Nourdin, Ivan and Simon, Thomas},
+  title		= {On the absolute continuity of {L}\'{e}vy processes with
+		  drift},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {34},
+  year		= {2006},
+  number	= {3},
+  pages		= {1035--1051},
+  issn		= {0091-1798},
+  mrclass	= {60G51 (60H10)},
+  mrnumber	= {2243878},
+  mrreviewer	= {Tina M. Marquardt},
+  doi		= {10.1214/009117905000000620},
+  url		= {https://doi.org/10.1214/009117905000000620}
 }
 
 @Article{	  nourdin.simon:07:correcting,
@@ -47518,21 +47529,6 @@
 
 @Article{	  nualart.sanz:85:malliavin,
   author	= {Nualart, D. and Sanz, M.},
-  title		= {Malliavin calculus for two-parameter processes},
-  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
-  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
-		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
-  number	= {3},
-  year		= {1985},
-  pages		= {73--86},
-  issn		= {0246-1501},
-  mrclass	= {60H15 (60G60 60H07)},
-  mrnumber	= {790724},
-  mrreviewer	= {M. Zakai}
-}
-
-@Article{	  nualart.sanz:85:malliavin*1,
-  author	= {Nualart, D. and Sanz, M.},
   title		= {Malliavin calculus for two-parameter {W}iener
 		  functionals},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -47548,6 +47544,21 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00531868},
   url		= {https://doi.org/10.1007/BF00531868}
+}
+
+@Article{	  nualart.sanz:85:malliavin*1,
+  author	= {Nualart, D. and Sanz, M.},
+  title		= {Malliavin calculus for two-parameter processes},
+  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
+  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
+		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
+  number	= {3},
+  year		= {1985},
+  pages		= {73--86},
+  issn		= {0246-1501},
+  mrclass	= {60H15 (60G60 60H07)},
+  mrnumber	= {790724},
+  mrreviewer	= {M. Zakai}
 }
 
 @Article{	  nualart.sanz:89:stochastic,
@@ -57045,22 +57056,6 @@
 
 @Article{	  talagrand:06:parisi,
   author	= {Talagrand, Michel},
-  title		= {Parisi measures},
-  journal	= {J. Funct. Anal.},
-  fjournal	= {Journal of Functional Analysis},
-  volume	= {231},
-  year		= {2006},
-  number	= {2},
-  pages		= {269--286},
-  issn		= {0022-1236},
-  mrclass	= {82B44 (28A33 82D30)},
-  mrnumber	= {2195333},
-  doi		= {10.1016/j.jfa.2005.03.001},
-  url		= {https://doi.org/10.1016/j.jfa.2005.03.001}
-}
-
-@Article{	  talagrand:06:parisi*1,
-  author	= {Talagrand, Michel},
   title		= {The {P}arisi formula},
   journal	= {Ann. of Math. (2)},
   fjournal	= {Annals of Mathematics. Second Series},
@@ -57074,6 +57069,22 @@
   mrreviewer	= {Fran\c{c}ois Germinet},
   doi		= {10.4007/annals.2006.163.221},
   url		= {https://doi.org/10.4007/annals.2006.163.221}
+}
+
+@Article{	  talagrand:06:parisi*1,
+  author	= {Talagrand, Michel},
+  title		= {Parisi measures},
+  journal	= {J. Funct. Anal.},
+  fjournal	= {Journal of Functional Analysis},
+  volume	= {231},
+  year		= {2006},
+  number	= {2},
+  pages		= {269--286},
+  issn		= {0022-1236},
+  mrclass	= {82B44 (28A33 82D30)},
+  mrnumber	= {2195333},
+  doi		= {10.1016/j.jfa.2005.03.001},
+  url		= {https://doi.org/10.1016/j.jfa.2005.03.001}
 }
 
 @Article{	  talagrand:10:construction,
@@ -58285,6 +58296,23 @@
 
 @Article{	  tracy.widom:09:on,
   author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On {ASEP} with step {B}ernoulli initial condition},
+  journal	= {J. Stat. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {137},
+  year		= {2009},
+  number	= {5-6},
+  pages		= {825--838},
+  issn		= {0022-4715},
+  mrclass	= {60K35 (82C22)},
+  mrnumber	= {2570751},
+  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
+  doi		= {10.1007/s10955-009-9867-1},
+  url		= {https://doi.org/10.1007/s10955-009-9867-1}
+}
+
+@Article{	  tracy.widom:09:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the distribution of a second-class particle in the
 		  asymmetric simple exclusion process},
   journal	= {J. Phys. A},
@@ -58299,23 +58327,6 @@
   mrreviewer	= {Pablo A. Ferrari},
   doi		= {10.1088/1751-8113/42/42/425002},
   url		= {https://doi.org/10.1088/1751-8113/42/42/425002}
-}
-
-@Article{	  tracy.widom:09:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On {ASEP} with step {B}ernoulli initial condition},
-  journal	= {J. Stat. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {137},
-  year		= {2009},
-  number	= {5-6},
-  pages		= {825--838},
-  issn		= {0022-4715},
-  mrclass	= {60K35 (82C22)},
-  mrnumber	= {2570751},
-  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
-  doi		= {10.1007/s10955-009-9867-1},
-  url		= {https://doi.org/10.1007/s10955-009-9867-1}
 }
 
 @Article{	  tracy.widom:09:total,
